@@ -20,8 +20,21 @@ package hu.blackbelt.judo.runtime.core.dao.rdbms.query.processor;
  * #L%
  */
 
-import hu.blackbelt.judo.meta.asm.runtime.AsmUtils;
-import hu.blackbelt.judo.meta.query.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
+import java.util.Stack;
+import java.util.stream.Collectors;
+
+import hu.blackbelt.judo.meta.query.Filter;
+import hu.blackbelt.judo.meta.query.Join;
+import hu.blackbelt.judo.meta.query.Node;
+import hu.blackbelt.judo.meta.query.ReferencedJoin;
+import hu.blackbelt.judo.meta.query.Select;
+import hu.blackbelt.judo.meta.query.SubSelect;
+import hu.blackbelt.judo.meta.query.SubSelectFeature;
 import hu.blackbelt.judo.runtime.core.dao.rdbms.executors.StatementExecutor;
 import hu.blackbelt.judo.runtime.core.dao.rdbms.query.RdbmsBuilder;
 import hu.blackbelt.judo.runtime.core.dao.rdbms.query.RdbmsBuilderContext;
@@ -33,14 +46,7 @@ import hu.blackbelt.judo.runtime.core.dao.rdbms.query.model.join.RdbmsTableJoin;
 import hu.blackbelt.judo.runtime.core.dao.rdbms.query.utils.RdbmsAliasUtil;
 import lombok.Builder;
 import lombok.extern.slf4j.Slf4j;
-import org.eclipse.emf.common.util.ECollections;
-import org.eclipse.emf.common.util.UniqueEList;
-
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import org.eclipse.emf.ecore.util.EcoreUtil;
 
 import static hu.blackbelt.judo.runtime.core.dao.rdbms.query.utils.RdbmsAliasUtil.getParentIdColumnAlias;
 
@@ -64,89 +70,137 @@ public class FilterJoinProcessor {
             log.trace(builderContext.toString());
         }
 
-        if (!joins.stream().anyMatch(j -> Objects.equals(filter.getAlias(), j.getAlias()))) {
+        int sizeOfJoinsBeforeFilterJoins = joins.size();
+
+        if (joins.stream().noneMatch(j -> Objects.equals(filter.getAlias(), j.getAlias()))) {
             joins.add(RdbmsTableJoin.builder()
-                    .tableName(rdbmsBuilder.getTableName(filter.getType()))
-                    .columnName(StatementExecutor.ID_COLUMN_NAME)
-                    .partnerTablePrefix(partnerTablePrefix)
-                    .partnerTable(partnerTable)
-                    .partnerColumnName(partnerTable instanceof SubSelect ? getParentIdColumnAlias(query.getContainer()) : StatementExecutor.ID_COLUMN_NAME)
-                    .alias(filter.getAlias())
-                    .build());
+                                    .tableName(rdbmsBuilder.getTableName(filter.getType()))
+                                    .columnName(StatementExecutor.ID_COLUMN_NAME)
+                                    .partnerTablePrefix(partnerTablePrefix)
+                                    .partnerTable(partnerTable)
+                                    .partnerColumnName(partnerTable instanceof SubSelect ? getParentIdColumnAlias(query.getContainer()) : StatementExecutor.ID_COLUMN_NAME)
+                                    .alias(filter.getAlias())
+                                    .build());
             if (addJoinsOfFilterFeature) {
-                final List<Join> navigationJoins = new UniqueEList<>();
-                final List<Join> targetJoins = new UniqueEList<>(filter.getFeature().getNodes().stream()
-                        .filter(n -> n instanceof Join)
-                        .map(n -> (Join) n)
-                        .collect(Collectors.toList()));
-                while (!targetJoins.isEmpty()) {
-                    final List<Join> newNavigationJoins = targetJoins.stream()
-                            .map(j -> j.getPartner())
-                            .filter(n -> n instanceof Join && !navigationJoins.contains(n))
-                            .map(n -> (Join) n)
-                            .collect(Collectors.toList());
-                    navigationJoins.addAll(newNavigationJoins);
-                    targetJoins.clear();
-                    targetJoins.addAll(newNavigationJoins);
+                List<Join> filterFeaturesNotProcessed =
+                        filter.getFeature().getNodes().stream()
+                              .filter(n -> !Objects.equals(n, filter) && n instanceof Join)
+                              .flatMap(n -> ((Join) n).getAllJoins().stream())
+                              .toList();
+
+                for (Join join : filterFeaturesNotProcessed) {
+                    Set<Join> allPartnerJoins =
+                            filterFeaturesNotProcessed.stream()
+                                                      .filter(j -> !processedNodesForJoins.contains(j))
+                                                      .flatMap(j -> getPartnerJoins(j).stream())
+                                                      .collect(Collectors.toSet());
+                    if (!processedNodesForJoins.contains(join) && !allPartnerJoins.contains(join)) {
+                        // process join tree from the bottom
+                        if (join instanceof ReferencedJoin && filter.eContainer() instanceof Select selectOfFilter && selectOfFilter.eContainer() == null) {
+                            // these joins are presumably added by the filters defined in query customizer
+                            processJoinTreeForFilter(builderContext, join, processedNodesForJoins, filter, joins, rdbmsBuilder);
+                        } else {
+                            processExistingJoinTree(builderContext, join, processedNodesForJoins, joins, rdbmsBuilder);
+                        }
+                    }
                 }
-
-                List<Join> reversedNavigationJoins = new ArrayList<>(navigationJoins);
-                Collections.reverse(reversedNavigationJoins);
-
-                List<Join> navigationJoinsNotProcessed =  reversedNavigationJoins.stream()
-                        .filter(join -> !processedNodesForJoins.contains(join)).collect(Collectors.toList());
-
-                for (Join join : navigationJoinsNotProcessed) {
-                    joins.addAll(rdbmsBuilder.processJoin(
-                            JoinProcessParameters.builder()
-                                    .builderContext(builderContext)
-                                    .join(join)
-                                    .build()
-                    ));
-                    processedNodesForJoins.add(join);
-                };
-
-                List<Join> filterFeaturesNoProcessed = filter.getFeature().getNodes().stream()
-                        .filter(n -> !processedNodesForJoins.contains(n) && !Objects.equals(n, filter) && n instanceof Join)
-                        .flatMap(n -> ((Join) n).getAllJoins().stream())
-                        .collect(Collectors.toList());
-
-                for (Join join : filterFeaturesNoProcessed) {
-                    joins.addAll(rdbmsBuilder.processJoin(
-                            JoinProcessParameters.builder()
-                                    .builderContext(builderContext)
-                                    .join(join)
-                                    .build()
-                    ));
-                    processedNodesForJoins.add(join);
-                };
             }
         }
 
-        List<SubSelectFeature> subSelectFilterFeaturesNotProcessed = filter.getFeatures().stream()
-                        .filter(f -> f instanceof SubSelectFeature).map(f -> (SubSelectFeature) f)
-                        .filter(f -> !joins.stream().anyMatch(j -> Objects.equals(f.getSubSelect().getAlias(), j.getAlias())))
-                        .collect(Collectors.toList());
+        List<SubSelectFeature> subSelectFilterFeaturesNotProcessed =
+                filter.getFeatures().stream()
+                      .filter(f -> f instanceof SubSelectFeature).map(f -> (SubSelectFeature) f)
+                      .filter(f -> joins.stream().noneMatch(j -> Objects.equals(f.getSubSelect().getAlias(), j.getAlias())))
+                      .toList();
 
-        List<RdbmsQueryJoin> subSelectFilterFeaturesQueryJoins = subSelectFilterFeaturesNotProcessed.stream()
-                .map(f -> RdbmsQueryJoin.<ID>builder()
-                        .resultSet(
-                                RdbmsResultSet.<ID>builder()
-                                        .query(f.getSubSelect())
-                                        .builderContext(builderContext)
-                                        .withoutFeatures(true)
-                                        .build())
-                        .outer(true)
-                        .columnName(RdbmsAliasUtil.getOptionalParentIdColumnAlias(f.getSubSelect().getContainer()))
-                        .partnerTable(f.getSubSelect().getNavigationJoins().isEmpty() ? null : f.getSubSelect().getContainer())
-                        .partnerColumnName(f.getSubSelect().getNavigationJoins().isEmpty() ? null : StatementExecutor.ID_COLUMN_NAME)
-                        .alias(f.getSubSelect().getAlias())
-                        .build())
-                .collect(Collectors.toList());
+        List<RdbmsQueryJoin<ID>> subSelectFilterFeaturesQueryJoins =
+                subSelectFilterFeaturesNotProcessed.stream()
+                                                   .map(f -> RdbmsQueryJoin.<ID>builder()
+                                                                           .resultSet(RdbmsResultSet.<ID>builder()
+                                                                                                    .query(f.getSubSelect())
+                                                                                                    .builderContext(builderContext)
+                                                                                                    .withoutFeatures(true)
+                                                                                                    .build())
+                                                                           .outer(true)
+                                                                           .columnName(RdbmsAliasUtil.getOptionalParentIdColumnAlias(f.getSubSelect().getContainer()))
+                                                                           .partnerTable(f.getSubSelect().getNavigationJoins().isEmpty() ? null : f.getSubSelect().getContainer())
+                                                                           .partnerColumnName(f.getSubSelect().getNavigationJoins().isEmpty() ? null : StatementExecutor.ID_COLUMN_NAME)
+                                                                           .alias(f.getSubSelect().getAlias())
+                                                                           .build())
+                                                   .collect(Collectors.toList());
 
         joins.addAll(subSelectFilterFeaturesQueryJoins);
-        conditions.addAll(rdbmsBuilder.mapFeatureToRdbms(filter.getFeature(), builderContext).collect(Collectors.toList()));
+
+        int sizeOfJoinsAfterFilterJoins = joins.size();
+
+        conditions.addAll(rdbmsBuilder.mapFeatureToRdbms(filter.getFeature(), builderContext).toList());
         rdbmsBuilder.addAncestorJoins(joins, filter, builderContext);
+
+        int sizeOfJoinsAfterAncestors = joins.size();
+
+        List<RdbmsJoin> newJoinsList = new ArrayList<>(joins);
+        joins.clear();
+
+        joins.addAll(newJoinsList.subList(0, sizeOfJoinsBeforeFilterJoins));
+        joins.addAll(newJoinsList.subList(sizeOfJoinsAfterFilterJoins, sizeOfJoinsAfterAncestors));
+        joins.addAll(newJoinsList.subList(sizeOfJoinsBeforeFilterJoins, sizeOfJoinsAfterFilterJoins));
+    }
+
+    private static Collection<Join> getPartnerJoins(Join join) {
+        List<Join> joins = new ArrayList<>();
+        Node currentNode = join.getPartner();
+        while (currentNode instanceof Join currentJoin) {
+            joins.add(currentJoin);
+            currentNode = currentJoin.getPartner();
+        }
+        return joins;
+    }
+
+    private static <ID> void processJoinTreeForFilter(RdbmsBuilderContext builderContext, Join join, List<Join> processedNodesForJoins, Filter filter, List<RdbmsJoin> joins, RdbmsBuilder<ID> rdbmsBuilder) {
+        Stack<Join> joinStack = new Stack<>();
+        Node currentNode = join;
+        while (currentNode instanceof Join currentJoin) {
+            Join newJoin = EcoreUtil.copy(currentJoin);
+            processedNodesForJoins.add(currentJoin);
+            processedNodesForJoins.add(newJoin);
+
+            joinStack.add(newJoin);
+            currentNode = currentJoin.getPartner();
+        }
+
+        Join previousJoin;
+        Join stackElement = null;
+        while (!joinStack.isEmpty()) {
+            previousJoin = stackElement;
+            stackElement = joinStack.pop();
+
+            stackElement.setPartner(previousJoin == null ? filter : previousJoin);
+            addJoin(builderContext, joins, rdbmsBuilder, stackElement);
+        }
+    }
+
+    private static <ID> void processExistingJoinTree(RdbmsBuilderContext builderContext, Join join, List<Join> processedNodesForJoins, List<RdbmsJoin> joins, RdbmsBuilder<ID> rdbmsBuilder) {
+        Stack<Join> joinStack = new Stack<>();
+        Node currentNode = join;
+        while (currentNode instanceof Join currentJoin) {
+            processedNodesForJoins.add(currentJoin);
+
+            joinStack.add(currentJoin);
+            currentNode = currentJoin.getPartner();
+        }
+
+        while (!joinStack.isEmpty()) {
+            addJoin(builderContext, joins, rdbmsBuilder, joinStack.pop());
+        }
+    }
+
+    private static <ID> void addJoin(RdbmsBuilderContext builderContext, List<RdbmsJoin> joins, RdbmsBuilder<ID> rdbmsBuilder, Join join) {
+        joins.addAll(rdbmsBuilder.processJoin(
+                JoinProcessParameters.builder()
+                                     .builderContext(builderContext)
+                                     .join(join)
+                                     .build()
+        ));
     }
 
 }
